# py-twosamplemr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: benchmark.py  compare_R_vs_Python.ipynb
pytwosamplemr/: __init__.py  _nmmin.py  _wls.py  allmethods.py  core.py  datasets.py  estimators.py  harmonise.py  plotting.py  results.py
tests/: r_reference_driver.R  test_r_parity.py  test_smoke.py
