[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytwosamplemr"
version = "0.1.0"
description = "Pure-Python port of two-sample Mendelian randomization — the MendelianRandomization estimator suite plus the TwoSampleMR harmonisation / diagnostics workflow."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Zehua Zeng", email = "starlitnightly@163.com" },
]
keywords = [
    "mendelian-randomization", "two-sample-MR", "MendelianRandomization",
    "TwoSampleMR", "instrumental-variables", "causal-inference",
    "GWAS", "IVW", "MR-Egger", "weighted-median", "epidemiology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "statsmodels>=0.13"]

[project.urls]
Homepage = "https://github.com/omicverse/py-twosamplemr"
Repository = "https://github.com/omicverse/py-twosamplemr"
Issues = "https://github.com/omicverse/py-twosamplemr/issues"
"Upstream CRAN package" = "https://cran.r-project.org/package=MendelianRandomization"
"Upstream (omicverse)" = "https://github.com/Starlitnightly/omicverse"

[tool.setuptools.packages.find]
include = ["pytwosamplemr*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::RuntimeWarning",
]
